# Codex-workflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  action.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/codex/: __init__.py  codex_deus_maximus.py
tests/: __init__.py  test_codex_deus_maximus.py
