[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-workflow"
version = "1.0.0"
description = "A God-Tier Repository Guardian that strictly enforces architecture, testing, and history standards"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "IAmSoThirsty"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pip-audit>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest-mock>=3.11.1",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.1",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/IAmSoThirsty/Codex-workflow"
Repository = "https://github.com/IAmSoThirsty/Codex-workflow"
Issues = "https://github.com/IAmSoThirsty/Codex-workflow/issues"

[project.scripts]
codex-guardian = "codex.codex_deus_maximus:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
